FIX: Mejora de legibilidad en .js

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-color: rgb(49, 49, 49);
+    background-color: rgb(122, 122, 122);
     margin: 0;
     padding: 0;
     min-height: 100vh;
@@ -190,6 +190,7 @@ nav {
 
 #link {
     color: #4285F4;
+    font-size: 0.8rem;
 }
 
 .avatar-menu a,
@@ -291,8 +292,8 @@ h4+p {
     position: fixed;
     top: 0;
     left: 0;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     transition: all .5s;
     display: flex;
     justify-content: center;
@@ -303,13 +304,14 @@ h4+p {
 .modal {
     display: grid;
     grid-template-rows: 1fr 14fr;
-    height: 80%;
-    width: 50%;
+    height: 90%;
+    width: 52%;
     background-color: white;
     position: absolute;
     border-radius: 0.6rem;
     border: 1px solid rgb(223, 223, 223);
     padding: 0.5rem;
+    box-shadow: 3px 3px 10px rgba(0 0 0 / 0.5);
 }
 
 .modal-title {
@@ -317,8 +319,9 @@ h4+p {
 }
 
 .modal-avatar {
-    width: 18%;
-    height: 38%;
+    width: 8rem;
+    height: 8rem;
+    margin-bottom: 1rem;
 }
 
 .modal-user-info {
@@ -356,6 +359,15 @@ h4+p {
     background-color: transparent;
     cursor: pointer;
     font-weight: bold;
+}
+
+#input-modal {
+    width: 60%;
+    height: 3rem;
+    border: 1px solid rgb(179, 179, 179);
+    border-radius: 0.3rem;
+    padding-left: 1.25rem;
+    margin-right: 0;
 }
 
 #channel {
